# ecobalyse-runner

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  compose.yaml  config.py  justfile  pyproject.toml  tasks.py
.github/workflows/: ci.yml
scripts/: run-eb-data-container.sh
tests/: test_sample.py
