[project]
name = "ecobalyse-runner"
version = "0.1.0"
description = "Accélerer la mise en place de l'affichage environnemental ; automatisation de la mise à jour des données"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dynaconf>=3.2.12",
    "litestar[standard]>=2.18.0",
    "sniffio>=1.3.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
